# idfxx

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Justfile  NOTICE  README.md  partitions.csv  partitions_8mb.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32c61  sdkconfig.no-exceptions  sdkconfig.no-ipv6  sdkconfig.qemu
.github/scripts/: parse_unity_output.py
.github/workflows/: build.yml  docs.yml  publish.yml  upload_components.yml
components/idfxx_adc/: CMakeLists.txt  README.md  idf_component.yml
components/idfxx_adc/examples/battery_voltage/: CMakeLists.txt
components/idfxx_adc/examples/battery_voltage/main/: idf_component.yml  main.cpp
components/idfxx_adc/examples/signal_stats/: CMakeLists.txt
components/idfxx_adc/examples/signal_stats/main/: main.cpp
components/idfxx_adc/include/idfxx/: adc  adc.hpp
components/idfxx_adc/src/: adc.cpp
components/idfxx_adc/tests/: CMakeLists.txt  adc_sampler_test.cpp  adc_test.cpp
components/idfxx_button/: CMakeLists.txt  README.md  idf_component.yml
components/idfxx_console/: CMakeLists.txt  README.md  idf_component.yml
components/idfxx_console/examples/console_repl/: CMakeLists.txt
components/idfxx_console/examples/console_repl/main/: idf_component.yml  main.cpp
components/idfxx_console/include/idfxx/: console  console.hpp
components/idfxx_console/src/: console.cpp
components/idfxx_console/tests/: CMakeLists.txt  console_test.cpp
components/idfxx_core/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/idfxx_core/examples/exception_api/: CMakeLists.txt
components/idfxx_core/examples/exception_api/main/: main.cpp
components/idfxx_core/examples/flags/: CMakeLists.txt
components/idfxx_core/examples/flags/main/: idf_component.yml  main.cpp
components/idfxx_core/examples/memory_allocators/: CMakeLists.txt
components/idfxx_core/examples/memory_allocators/main/: main.cpp
components/idfxx_core/examples/result_api/: CMakeLists.txt  sdkconfig.defaults
components/idfxx_core/examples/result_api/main/: main.cpp
components/idfxx_core/examples/system_info/: CMakeLists.txt  sdkconfig.defaults
components/idfxx_core/examples/system_info/main/: main.cpp
components/idfxx_core/include/idfxx/: app  app.hpp  chrono  chrono.hpp  cpu  cpu.hpp  error  error.hpp  flags  flags.hpp  future  future.hpp  memory  memory.hpp  net  net.hpp  random  random.hpp  sched  sched.hpp  system  system.hpp  uart  uart.hpp
components/idfxx_core/src/: app.cpp  error.cpp  net.cpp  sched.cpp  system.cpp
components/idfxx_core/tests/: CMakeLists.txt  app_test.cpp  chrono_test.cpp  cpu_test.cpp  error_test.cpp  flags_test.cpp  future_test.cpp  memory_aligned_allocator_test.cpp  memory_dma_allocator_test.cpp  memory_dram_allocator_test.cpp  memory_heap_alloc_test.cpp  memory_heap_test.cpp  memory_spiram_allocator_test.cpp  net_test.cpp  random_test.cpp  sched_test.cpp  system_test.cpp  uart_test.cpp
components/idfxx_dht/: CMakeLists.txt  README.md  idf_component.yml
components/idfxx_ds18x20/: CMakeLists.txt  LICENSE  README.md  (+1 more)
components/idfxx_event_group/: CMakeLists.txt  README.md  idf_component.yml
components/idfxx_event_group/examples/event_group_sync/: CMakeLists.txt
components/idfxx_event_group/examples/event_group_sync/main/: idf_component.yml  main.cpp
components/idfxx_event_group/include/idfxx/: event_group  event_group.hpp
components/idfxx_event_group/tests/: event_group_test.cpp
components/idfxx_net/: CMakeLists.txt  README.md  idf_component.yml
components/idfxx_net/examples/dns_lookup/: CMakeLists.txt
components/idfxx_net/examples/dns_lookup/main/: idf_component.yml  main.cpp
components/idfxx_net/examples/icmp_ping/: CMakeLists.txt  sdkconfig.defaults
components/idfxx_net/examples/icmp_ping/main/: main.cpp
components/idfxx_net/examples/netconn_echo/: CMakeLists.txt  sdkconfig.defaults
components/idfxx_net/examples/netconn_echo/main/: main.cpp
components/idfxx_net/examples/tcp_client/: CMakeLists.txt
components/idfxx_net/examples/tcp_client/main/: main.cpp
components/idfxx_net/examples/tcp_echo_server/: CMakeLists.txt
components/idfxx_net/examples/tcp_echo_server/main/: main.cpp
components/idfxx_net/examples/udp_echo/: CMakeLists.txt
components/idfxx_net/examples/udp_echo/main/: idf_component.yml  main.cpp
components/idfxx_net/include/idfxx/net/: datagram_socket  datagram_socket.hpp  endpoint  endpoint.hpp  error  error.hpp  listener  listener.hpp  raw_socket  raw_socket.hpp  resolver  resolver.hpp  stream_socket  stream_socket.hpp
components/idfxx_net/include/idfxx/net/detail/: connectionless_socket_base.hpp  ip_io_socket_base.hpp  ip_socket_base.hpp
components/idfxx_net/include/idfxx/net/netconn/: buffer  buffer.hpp  datagram_channel  datagram_channel.hpp  datagram_connection  datagram_connection.hpp  listener  listener.hpp  netbuf  netbuf.hpp  raw_channel  raw_channel.hpp  raw_connection  raw_connection.hpp  stream_channel  stream_channel.hpp  stream_connection  stream_connection.hpp
components/idfxx_net/include/idfxx/net/netconn/detail/: base_channel.hpp  base_connection.hpp  connectionless_channel.hpp
components/idfxx_net/src/: connectionless_socket_base.cpp  datagram_socket.cpp  endpoint.cpp  error.cpp  ip_addr.cpp  ip_io_socket_base.cpp  ip_socket_base.cpp  listener.cpp  netconn_base.cpp  netconn_buffer.cpp  netconn_connectionless_base.cpp  netconn_datagram.cpp  netconn_listener.cpp  netconn_netbuf.cpp  netconn_raw.cpp  netconn_stream.cpp  raw_socket.cpp  resolver.cpp  select.cpp  sockaddr.cpp  sockopt.cpp  stream_socket.cpp
components/idfxx_net/src/detail/: ip_addr.hpp  select.hpp  sockaddr.hpp  sockopt.hpp  sockopt_apply.hpp
components/idfxx_net/tests/: endpoint_test.cpp  error_test.cpp  listener_test.cpp  netconn_loopback_test.cpp  resolver_test.cpp  socket_tcp_loopback_test.cpp  socket_udp_loopback_test.cpp
docs/: Doxyfile
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
scripts/: component-order.py
tests/: CMakeLists.txt  http_test_utils.hpp  main.cpp
(+441 files in other folders)
